New Update (bib)

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,8 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{Abdulmumin2021_tagless,
+@article{Abdulmumin2021.tagless,
+  bibtex_show={true},
   doi = {10.1007/s10590-021-09284-y},
   url = {https://doi.org/10.1007%2Fs10590-021-09284-y},
   year = 2021,
@@ -17,7 +18,8 @@
   journal = {Machine Translation}
 }
 
-@article{Abdulmumin2021_hybrid,
+@article{Abdulmumin2021.hybrid,
+  bibtex_show={true},
   title = {A hybrid approach for improved low resource neural machine translation using monolingual data},
   journal = {Engineering Letters},
   year = {2021},
@@ -27,7 +29,7 @@
   author = {Abdulmumin, Idris and Galadanci, Bashir Shehu and Isah, Abubakar and Kakudi, Habeebah Adamu and Sinan, Isma'ila Idris}
 }
 
-@article{Abdulmumin2021_data_selection,
+@article{Abdulmumin2021.data.selection,
   title = {Data Selection as an Alternative to Quality Estimation in Self-Learning for Low Resource Neural Machine Translation},
   journal = {Lecture Notes in Computer Science},
   author = {Abdulmumin, Idris and Galadanci, Bashir Shehu and Ahmad, Ibrahim Said and Abdullahi, Rabiu Ibrahim},
@@ -36,7 +38,7 @@
   year = {2021}
 }
 
-@article{Abdulmumin2021_enhanced,
+@article{Abdulmumin2021.enhanced,
   title = {Enhanced Back-Translation for Low Resource Neural Machine Translation Using Self-training},
   journal = {Communications in Computer and Information Science},
   author = {Abdulmumin, Idris and Galadanci, Bashir Shehu and Isah, Abubakar},
@@ -54,18 +56,18 @@
   year = {2021}
 }
 
-@article{Aliyu2020_grid,
+@article{Aliyu2020.grid,
   title = {Improving Grid Computing Performance by Optimally Reducing Checkpointing Effect},
   journal = {International Journal of Information Processing and Communication},
   author = {Aliyu, Garba and Kana, A. F. D and Abdullahi, Muhammad and Abdulmumin, Idris and Adamu, Shehu and Jauro, Fatsuma},
   issn = {2645-2960},
   year = {2020},
   volume = {9},
-  number = {1 \& 2},
+  number = {2},
   pages = {52--64},
 }
 
-@inproceedings{Ismail2020_recommender,
+@inproceedings{Ismail2020.recommender,
   title = {An Autonomous Courses Recommender System for Undergraduate Using Machine Learning Techniques},
   booktitle = {2020 International Conference in Mathematics, Computer Engineering and Computer Science, ICMCECS 2020},
   year = {2020},
@@ -79,14 +81,14 @@
   author = {Abdulmumin, Idris and Galadanci, Bashir Shehu}
 }
 
-@inproceedings{Abubakar2017_design,
+@inproceedings{Abubakar2017.design,
   title = {Design and Comparison Migration between Ipv4 and Ipv6 Transition Techniques},
   booktitle = {3rd Annual International Conference of the Faculty of Science, Yusuf Maitama Sule University, Kano. YUMSCIC2017},
   author = {Isah, Abubakar and Abdulmumin, Idris},
   year = {2017}
 }
 
-@inproceedings{Muhammad2021_speed_aware,
+@inproceedings{Muhammad2021.speed.aware,
   title = {Speed-Aware Routing Protocol for Reliability in Mobile ad-hoc Networks},
   booktitle = {Proceedings of the International Conference on Computing & Advances in Information Technology (ICCAIT)},
   author={Muhammad, Mansur Alhaji and Isah, Abubakar and Abdulmumin, Idris and Muyim, Abubakar Muhammad},
