--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,92 +5,91 @@
 
 @article{Abdulmumin2021.tagless,
   bibtex_show={true},
-  doi = {10.1007/s10590-021-09284-y},
-  url = {https://doi.org/10.1007%2Fs10590-021-09284-y},
-  year = 2021,
-  month = {nov},
-  publisher = {Springer Science and Business Media {LLC}},
-  volume = {35},
-  number = {4},
-  pages = {519--549},
-  author = {Abdulmumin, Idris and Galadanci, Bashir Shehu and Aliyu, Garba},
-  title = {Tag-less back-translation},
-  journal = {Machine Translation}
+  doi={10.1007/s10590-021-09284-y},
+  url={https://doi.org/10.1007/s10590-021-09284-y},
+  year={2021},
+  publisher={Springer Science and Business Media {LLC}},
+  volume={35},
+  number={4},
+  pages={519--549},
+  author={Abdulmumin, Idris and Galadanci, Bashir Shehu and Aliyu, Garba},
+  title={Tag-less back-translation},
+  journal={Machine Translation}
 }
 
 @article{Abdulmumin2021.hybrid,
   bibtex_show={true},
-  title = {A hybrid approach for improved low resource neural machine translation using monolingual data},
-  journal = {Engineering Letters},
-  year = {2021},
-  volume = {29},
-  number = {4},
-  pages = {1478-1493},
-  author = {Abdulmumin, Idris and Galadanci, Bashir Shehu and Isah, Abubakar and Kakudi, Habeebah Adamu and Sinan, Isma'ila Idris}
+  title={A hybrid approach for improved low resource neural machine translation using monolingual data},
+  journal={Engineering Letters},
+  year={2021},
+  volume={29},
+  number={4},
+  pages={1478--1493},
+  author={Abdulmumin, Idris and Galadanci, Bashir Shehu and Isah, Abubakar and Kakudi, Habeebah Adamu and Sinan, Isma'ila Idris}
 }
 
 @article{Abdulmumin2021.data.selection,
-  title = {Data Selection as an Alternative to Quality Estimation in Self-Learning for Low Resource Neural Machine Translation},
-  journal = {Lecture Notes in Computer Science},
-  author = {Abdulmumin, Idris and Galadanci, Bashir Shehu and Ahmad, Ibrahim Said and Abdullahi, Rabiu Ibrahim},
-  doi = {10.1007/978-3-030-87013-3\_24},
-  url = {http://doi.org/10.1007/978-3-030-87013-3\_24},
-  year = {2021}
+  title={Data Selection as an Alternative to Quality Estimation in Self-Learning for Low Resource Neural Machine Translation},
+  journal={Lecture Notes in Computer Science},
+  author={Abdulmumin, Idris and Galadanci, Bashir Shehu and Ahmad, Ibrahim Said and Abdullahi, Rabiu Ibrahim},
+  doi={10.1007/978-3-030-87013-3\_24},
+  url={http://doi.org/10.1007/978-3-030-87013-3\_24},
+  year={2021}
 }
 
 @article{Abdulmumin2021.enhanced,
-  title = {Enhanced Back-Translation for Low Resource Neural Machine Translation Using Self-training},
-  journal = {Communications in Computer and Information Science},
-  author = {Abdulmumin, Idris and Galadanci, Bashir Shehu and Isah, Abubakar},
-  doi = {10.1007/978-3-030-69143-1\_28},
-  url = {http://doi.org/10.1007/978-3-030-69143-1\_28},
-  year = {2021}
+  title={Enhanced Back-Translation for Low Resource Neural Machine Translation Using Self-training},
+  journal={Communications in Computer and Information Science},
+  author={Abdulmumin, Idris and Galadanci, Bashir Shehu and Isah, Abubakar},
+  doi={10.1007/978-3-030-69143-1\_28},
+  url={http://doi.org/10.1007/978-3-030-69143-1\_28},
+  year={2021}
 }
 
 @article{Aliyu2021_recommender,
-  title = {Machine Learning Model for Recommending Suitable Courses of Study to Candidates in Nigerian Universities},
-  journal = {Lecture Notes in Computer Science},
-  author = {Aliyu, Garba and Haruna, Usman and Abdulmumin, Idris and Isma{'}il, Murtala and Umar, Ibrahim Enesi and Adamu, Shehu},
-  doi = {10.1007/978-3-030-87013-3\_20},
-  url = {http://doi.org/10.1007/978-3-030-87013-3\_20},
-  year = {2021}
+  title={Machine Learning Model for Recommending Suitable Courses of Study to Candidates in Nigerian Universities},
+  journal={Lecture Notes in Computer Science},
+  author={Aliyu, Garba and Haruna, Usman and Abdulmumin, Idris and Isma{'}il, Murtala and Umar, Ibrahim Enesi and Adamu, Shehu},
+  doi={10.1007/978-3-030-87013-3\_20},
+  url={http://doi.org/10.1007/978-3-030-87013-3\_20},
+  year={2021}
 }
 
 @article{Aliyu2020.grid,
-  title = {Improving Grid Computing Performance by Optimally Reducing Checkpointing Effect},
-  journal = {International Journal of Information Processing and Communication},
-  author = {Aliyu, Garba and Kana, A. F. D and Abdullahi, Muhammad and Abdulmumin, Idris and Adamu, Shehu and Jauro, Fatsuma},
-  issn = {2645-2960},
-  year = {2020},
-  volume = {9},
-  number = {2},
-  pages = {52--64},
+  title={Improving Grid Computing Performance by Optimally Reducing Checkpointing Effect},
+  journal={International Journal of Information Processing and Communication},
+  author={Aliyu, Garba and Kana, A. F. D and Abdullahi, Muhammad and Abdulmumin, Idris and Adamu, Shehu and Jauro, Fatsuma},
+  issn={2645-2960},
+  year={2020},
+  volume={9},
+  number={2},
+  pages={52--64},
 }
 
 @inproceedings{Ismail2020.recommender,
-  title = {An Autonomous Courses Recommender System for Undergraduate Using Machine Learning Techniques},
-  booktitle = {2020 International Conference in Mathematics, Computer Engineering and Computer Science, ICMCECS 2020},
-  year = {2020},
-  author = {Isma{'}Il, Murtala and Haruna, Usman and Aliyu, Garba and Abdulmumin, Idris and Adamu, Shehu}
+  title={An Autonomous Courses Recommender System for Undergraduate Using Machine Learning Techniques},
+  booktitle={2020 International Conference in Mathematics, Computer Engineering and Computer Science, ICMCECS 2020},
+  year={2020},
+  author={Isma{'}Il, Murtala and Haruna, Usman and Aliyu, Garba and Abdulmumin, Idris and Adamu, Shehu}
 }
 
-@inproceedings{Abdulmumin2019,
-  title = {HauWE: Hausa Words Embedding for Natural Language Processing},
-  booktitle = {2019 2nd International Conference of the IEEE Nigeria Computer Chapter, NigeriaComputConf 2019},
-  year = {2019},
-  author = {Abdulmumin, Idris and Galadanci, Bashir Shehu}
+@article{Abdulmumin2019,
+  title={HauWE: Hausa Words Embedding for Natural Language Processing},
+  journal={2019 2nd International Conference of the IEEE Nigeria Computer Chapter, NigeriaComputConf 2019},
+  year={2019},
+  author={Abdulmumin, Idris and Galadanci, Bashir Shehu}
 }
 
-@inproceedings{Abubakar2017.design,
-  title = {Design and Comparison Migration between Ipv4 and Ipv6 Transition Techniques},
-  booktitle = {3rd Annual International Conference of the Faculty of Science, Yusuf Maitama Sule University, Kano. YUMSCIC2017},
-  author = {Isah, Abubakar and Abdulmumin, Idris},
-  year = {2017}
+@article{Abubakar2017.design,
+  title={Design and Comparison Migration between Ipv4 and Ipv6 Transition Techniques},
+  journal={3rd Annual International Conference of the Faculty of Science, Yusuf Maitama Sule University, Kano. YUMSCIC2017},
+  author={Isah, Abubakar and Abdulmumin, Idris},
+  year={2017}
 }
 
-@inproceedings{Muhammad2021.speed.aware,
-  title = {Speed-Aware Routing Protocol for Reliability in Mobile ad-hoc Networks},
-  booktitle = {Proceedings of the International Conference on Computing & Advances in Information Technology (ICCAIT)},
+@article{Muhammad2021.speed.aware,
+  title={Speed-Aware Routing Protocol for Reliability in Mobile ad-hoc Networks},
+  journal={Proceedings of the International Conference on Computing & Advances in Information Technology (ICCAIT)},
   author={Muhammad, Mansur Alhaji and Isah, Abubakar and Abdulmumin, Idris and Muyim, Abubakar Muhammad},
   year={2021}
 }
