--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,6 +15,7 @@
   author={Abdulmumin, Idris and Galadanci, Bashir Shehu and Aliyu, Garba},
   title={Tag-less back-translation},
   journal={Machine Translation},
+  html={https://link.springer.com/article/10.1007/s10590-021-09284-y},
   selected={true}
 }
 
@@ -27,6 +28,9 @@
   number={4},
   pages={1478--1493},
   author={Abdulmumin, Idris and Galadanci, Bashir Shehu and Isah, Abubakar and Kakudi, Habeebah Adamu and Sinan, Isma'ila Idris},
+  url={http://www.engineeringletters.com/issues_v29/issue_4/EL_29_4_21.pdf},
+  html={http://www.engineeringletters.com/issues_v29/issue_4/EL_29_4_21.pdf},
+  pdf={EL_29_4_21.pdf},
   selected={true}
 }
 
