--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,119 +1,250 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@string{aps={American Physical Society,}}
 
-@article{Abdulmumin2021.tagless,
-  bibtex_show={true},
-  abbr={Mach. Transl.},
-  doi={10.1007/s10590-021-09284-y},
-  url={https://doi.org/10.1007/s10590-021-09284-y},
-  year={2021},
-  publisher={Springer Science and Business Media {LLC}},
-  volume={35},
-  number={4},
-  pages={519--549},
-  author={Abdulmumin, Idris and Galadanci, Bashir Shehu and Aliyu, Garba},
-  title={Tag-less back-translation},
-  journal={Machine Translation},
-  html={https://link.springer.com/article/10.1007/s10590-021-09284-y},
-  selected={true}
+
+@inproceedings{muhammad2023afrisentisemeval,
+title={AfriSenti-SemEval: Sentiment Analysis for Low-resource African Languages using Twitter Dataset},
+author={Shamsuddeen Hassan Muhammad and Seid Muhie Yimam and Idris Abdulmumin and Ibrahim Sa'id Ahmad and David Ifeoluwa Adelani and Sebastian Ruder and Nedjma OUSIDHOUM and Saminu Aliyu and Abinew Ali Ayele and Meriem Beloucif and Amina Abubakar Imam},
+booktitle={Task Proposals for the 17th International Workshop on Semantic Evaluation},
+year={2023},
+url={https://openreview.net/forum?id=EOUUCOwOq_r}
 }
 
-@article{Abdulmumin2021.hybrid,
-  bibtex_show={true},
-  abbr={Eng.},
-  title={A hybrid approach for improved low resource neural machine translation using monolingual data},
-  journal={Engineering Letters},
-  year={2021},
-  volume={29},
-  number={4},
-  pages={1478--1493},
-  author={Abdulmumin, Idris and Galadanci, Bashir Shehu and Isah, Abubakar and Kakudi, Habeebah Adamu and Sinan, Isma'ila Idris},
-  url={http://www.engineeringletters.com/issues_v29/issue_4/EL_29_4_21.pdf},
-  html={http://www.engineeringletters.com/issues_v29/issue_4/EL_29_4_21.pdf},
-  pdf={EL_29_4_21.pdf},
-  selected={true}
+@inproceedings{Abdulmumin2019,
+title={HauWE: Hausa Words Embedding for Natural Language Processing},
+booktitle={2019 2nd International Conference of the IEEE Nigeria Computer Chapter, NigeriaComputConf 2019},
+year={2019},
+author={Abdulmumin, Idris and Galadanci, Bashir Shehu},
+url={http://ieeexplore.ieee.org/document/8949674/},
+address={Zaria, Kaduna-Nigeria}
 }
 
-@article{Abdulmumin2021.data.selection,
-  bibtex_show={true},
-  abbr={LNCS},
-  title={Data Selection as an Alternative to Quality Estimation in Self-Learning for Low Resource Neural Machine Translation},
-  journal={Lecture Notes in Computer Science},
-  author={Abdulmumin, Idris and Galadanci, Bashir Shehu and Ahmad, Ibrahim Said and Abdullahi, Rabiu Ibrahim},
-  doi={10.1007/978-3-030-87013-3\_24},
-  url={http://doi.org/10.1007/978-3-030-87013-3\_24},
-  year={2021}
+@InProceedings{muhammad-EtAl:2022:LREC,
+author={Shamsuddeen Hassan Muhammad and David Ifeoluwa Adelani and Sebastian Ruder and Ibrahim Sa’id Ahmad and Idris Abdulmumin and Bello Shehu Bello and Monojit Choudhury and Chris Chinenye Emezue and Saheed Salahudeen Abdullahi and Anuoluwapo Aremu and Pavel Brazdil},
+title={NaijaSenti: A Nigerian Twitter Sentiment Corpus for Multilingual Sentiment Analysis},
+booktitle={Proceedings of the Language Resources and Evaluation Conference},
+month={6},
+year={2022},
+address={Marseille, France},
+publisher={European Language Resources Association},
+pages={590--602},
+url={https://aclanthology.org/2022.lrec-1.63}
 }
 
-@article{Abdulmumin2021.enhanced,
-  bibtex_show={true},
-  abbr={CCIS},
-  title={Enhanced Back-Translation for Low Resource Neural Machine Translation Using Self-training},
-  journal={Communications in Computer and Information Science},
-  author={Abdulmumin, Idris and Galadanci, Bashir Shehu and Isah, Abubakar},
-  doi={10.1007/978-3-030-69143-1\_28},
-  url={http://doi.org/10.1007/978-3-030-69143-1\_28},
-  year={2021}
+@INPROCEEDINGS{9803137,
+author={Abdulmumin, Idris and Galadanci, Bashir Shehu and Hassan Muhammad, Shamsuddeen and Aliyu, Garba},
+booktitle={2022 IEEE Nigeria 4th International Conference on Disruptive Technologies for Sustainable Development (NIGERCON)},
+title={Quantity vs. Quality of Monolingual Source Data in Automatic Text Translation: Can It Be Too Little If It Is Too Good?},
+year={2022},
+volume={},
+number={},
+pages={1-5},
+doi={10.1109/NIGERCON54645.2022.9803137}}
+
+@inproceedings{adelani-etal-2022-thousand,
+title="A Few Thousand Translations Go a Long Way! Leveraging Pre-trained Models for{A}frican News Translation",
+author="Adelani, Davidand
+Alabi, Jesujobaand
+Fan, Angelaand
+Kreutzer, Juliaand
+Shen, Xiaoyuand
+Reid, Macheland
+Ruiter, Danaand
+Klakow, Dietrichand
+Nabende, Peterand
+Chang, Ernieand
+Gwadabe, Tajuddeenand
+Sackey, Freshiaand
+Dossou, Bonaventure F. P.and
+Emezue, Chrisand
+Leong, Colinand
+Beukman, Michaeland
+Muhammad, Shamsuddeenand
+Jarso, Guyoand
+Yousuf, Oreenand
+Niyongabo Rubungo, Andreand
+Hacheme, Gillesand
+Wairagala, Eric Peterand
+Nasir, Muhammad Umairand
+Ajibade, Benjaminand
+Ajayi, Tundeand
+Gitau, Yvonneand
+Abbott, Jadeand
+Ahmed, Mohamedand
+Ochieng, Millicentand
+Aremu, Anuoluwapoand
+Ogayo, Perezand
+Mukiibi, Jonathanand
+Ouoba Kabore, Fatoumataand
+Kalipe, Godsonand
+Mbaye, Dergueneand
+Tapo, Allahsera Augusteand
+Memdjokam Koagne, Victoireand
+Munkoh-Buabeng, Edwinand
+Wagner, Valenciaand
+Abdulmumin, Idrisand
+Awokoya, Ayodeleand
+Buzaaba, Happyand
+Sibanda, Blessingand
+Bukula, Andiswaand
+Manthalu, Sam",
+booktitle="Proceedings of the 2022 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies",
+month=jul,
+year="2022",
+address="Seattle, United States",
+publisher="Association for Computational Linguistics",
+url="https://aclanthology.org/2022.naacl-main.223",
+pages="3053--3070",
 }
 
-@article{Aliyu2021.recommender,
-  bibtex_show={true},
-  abbr={LNCS},
-  title={Machine Learning Model for Recommending Suitable Courses of Study to Candidates in Nigerian Universities},
-  journal={Lecture Notes in Computer Science},
-  author={Aliyu, Garba and Haruna, Usman and Abdulmumin, Idris and Isma{'}il, Murtala and Umar, Ibrahim Enesi and Adamu, Shehu},
-  doi={10.1007/978-3-030-87013-3\_20},
-  url={http://doi.org/10.1007/978-3-030-87013-3\_20},
-  year={2021}
+@inproceedings{ibrahim2022necatclwe,
+title={{NECAT}-{CLWE}: A Simple But Efficient Parallel Data Generation Approach for Unsupervised and Semi-Supervised Neural Machine Translation},
+author={Rabiu Abdullahi Ibrahim and Idris Abdulmumin},
+booktitle={3rd Workshop on African Natural Language Processing},
+year={2022},
+url={https://openreview.net/forum?id=ruW4c9fNLZ5}
 }
 
-@article{Aliyu2020.grid,
-  bibtex_show={true},
-  abbr={IJIPC},
-  title={Improving Grid Computing Performance by Optimally Reducing Checkpointing Effect},
-  journal={International Journal of Information Processing and Communication},
-  author={Aliyu, Garba and Kana, A. F. D and Abdullahi, Muhammad and Abdulmumin, Idris and Adamu, Shehu and Jauro, Fatsuma},
-  issn={2645-2960},
-  year={2020},
-  volume={9},
-  number={2},
-  pages={52--64},
+@inproceedings{emezue2021the,
+title={The African Stopwords Project: Curating Stopwords for African Languages},
+author={Chris Chinenye Emezue and Hellina Hailu Nigatu and Cynthia Thinwa and Lerato Louis and Idris Abdulmumin and Samuel Gbenga Oyerinde and Benjamin Ayoade Ajibade and Helper Zhou and Emeka Felix Onwuegbuzia and Handel Chiagozie Emezue and Ifeoluwatayo Adeseye Ige and Atnafu Lambebo Tonja and Chiamaka Ijeoma Chukwuneke and Shamsuddeen Hassan Muhammad and Olanrewaju Samuel},
+booktitle={3rd Workshop on African Natural Language Processing},
+year={2022},
+url={https://openreview.net/forum?id=B0GEqcGV8-5}
 }
 
-@inproceedings{Ismail2020.recommender,
-  bibtex_show={true},
-  abbr={IEEE},
-  title={An Autonomous Courses Recommender System for Undergraduate Using Machine Learning Techniques},
-  booktitle={2020 International Conference in Mathematics, Computer Engineering and Computer Science, ICMCECS 2020},
-  year={2020},
-  author={Isma{'}Il, Murtala and Haruna, Usman and Aliyu, Garba and Abdulmumin, Idris and Adamu, Shehu}
+@inproceedings{muhammad-2022-domain,
+title="Domain-Specific Lexicon-Based Sentiment Analysis using Contextual Shifter Patterns",
+author="Muhammad, Shamsuddeen and
+Brazdil, Pavel and
+Abdulmumin, Idris",
+booktitle="Proceedings of the Sixth Workshop on Widening Natural Language Processing",
+month=dec,
+year="2022",
+address="Abu Dhabi, United Arab Emirates",
+publisher="Association for Computational Linguistics",
+url="https://aclanthology.org/2022.winlp-1.0"
 }
 
-@article{Abdulmumin2019,
-  bibtex_show={true},
-  abbr={IEEE},
-  title={HauWE: Hausa Words Embedding for Natural Language Processing},
-  journal={2019 2nd International Conference of the IEEE Nigeria Computer Chapter, NigeriaComputConf 2019},
-  year={2019},
-  author={Abdulmumin, Idris and Galadanci, Bashir Shehu}
+@inproceedings{aliyu-2022-herdphobia,
+title="HERDPhobia: A Dataset for Hate Speech Detection against Fulani Herdsmen in Nigeria",
+author="Saminu Aliyu and Gregory Wajiga and Muhammad Murtala and Shamsuddeen Muhammad and Idris Abdulmumin and Ibrahim Ahmad",
+booktitle="Proceedings of the Sixth Workshop on Widening Natural Language Processing",
+month=dec,
+year="2022",
+address="Abu Dhabi, United Arab Emirates",
+publisher="Association for Computational Linguistics",
+url="https://arxiv.org/abs/2211.15262"
 }
 
-@article{Abubakar2017.design,
-  bibtex_show={true},
-  abbr={YUMSCIC},
-  title={Design and Comparison Migration between Ipv4 and Ipv6 Transition Techniques},
-  journal={3rd Annual International Conference of the Faculty of Science, Yusuf Maitama Sule University, Kano. YUMSCIC2017},
-  author={Isah, Abubakar and Abdulmumin, Idris},
-  year={2017}
+@inproceedings{adelani-2022-masakhaner,
+url={https://aclanthology.org/2022.emnlp-main.298},
+author={Adelani, David Ifeoluwa and Neubig, Graham and Ruder, Sebastian and Rijhwani, Shruti and Beukman, Michael and Palen-Michel, Chester and Lignos, Constantine and Alabi, Jesujoba O. and Muhammad, Shamsuddeen H. and Nabende, Peter and Dione, Cheikh M. Bamba and Bukula, Andiswa and Mabuya, Rooweither and Dossou, Bonaventure F. P. and Sibanda, Blessing and Buzaaba, Happy and Mukiibi, Jonathan and Kalipe, Godson and Mbaye, Derguene and Taylor, Amelia and Kabore, Fatoumata and Emezue, Chris Chinenye and Aremu, Anuoluwapo and Ogayo, Perez and Gitau, Catherine and Munkoh-Buabeng, Edwin and Koagne, Victoire M. and Tapo, Allahsera Auguste and Macucwa, Tebogo and Marivate, Vukosi and Mboning, Elvis and Gwadabe, Tajuddeen and Adewumi, Tosin and Ahia, Orevaoghene and Nakatumba-Nabende, Joyce and Mokono, Neo L. and Ezeani, Ignatius and Chukwuneke, Chiamaka and Adeyemi, Mofetoluwa and Hacheme, Gilles Q. and Abdulmumin, Idris and Ogundepo, Odunayo and Yousuf, Oreen and Ngoli, Tatiana Moteu and Klakow, Dietrich},
+title={{MasakhaNER 2.0: Africa-centric Transfer Learning for Named Entity Recognition}},
+booktitle="Proceedings of the 2022 Conference on Empirical Methods in Natural Language Processing",
+month="dec",
+year="2022",
+address="Abu Dhabi, United Arab Emirates",
+publisher="Association for Computational Linguistics",
+pages="4488--4508",
+}
+@misc{https://doi.org/10.48550/arxiv.2211.05100,
+doi={10.48550/ARXIV.2211.05100},
+url={https://arxiv.org/abs/2211.05100},
+author={Scao, Teven Le and Fan, Angela and Akiki, Christopher and Pavlick, Ellie and Ilić, Suzana and Hesslow, Daniel and Castagné, Roman and Luccioni, Alexandra Sasha and Yvon, François and Gallé, Matthias and Tow, Jonathan and Rush, Alexander M. and Biderman, Stella and Webson, Albert and Ammanamanchi, Pawan Sasanka and Wang, Thomas and Sagot, Benoît and Muennighoff, Niklas and del Moral, Albert Villanova and Ruwase, Olatunji and Bawden, Rachel and Bekman, Stas and McMillan-Major, Angelina and Beltagy, Iz and Nguyen, Huu and Saulnier, Lucile and Tan, Samson and Suarez, Pedro Ortiz and Sanh, Victor and Laurençon, Hugo and Jernite, Yacine and Launay, Julien and Mitchell, Margaret and Raffel, Colin and Gokaslan, Aaron and Simhi, Adi and Soroa, Aitor and Aji, Alham Fikri and Alfassy, Amit and Rogers, Anna and Nitzav, Ariel Kreisberg and Xu, Canwen and Mou, Chenghao and Emezue, Chris and Klamm, Christopher and Leong, Colin and van Strien, Daniel and Adelani, David Ifeoluwa and Radev, Dragomir and Ponferrada, Eduardo González and Levkovizh, Efrat and Kim, Ethan and Natan, Eyal Bar and De Toni, Francesco and Dupont, Gérard and Kruszewski, Germán and Pistilli, Giada and Elsahar, Hady and Benyamina, Hamza and Tran, Hieu and Yu, Ian and Abdulmumin, Idris and Johnson, Isaac and Gonzalez-Dios, Itziar and de la Rosa, Javier and Chim, Jenny and Dodge, Jesse and Zhu, Jian and Chang, Jonathan and Frohberg, Jörg and Tobing, Joseph and Bhattacharjee, Joydeep and Almubarak, Khalid and Chen, Kimbo and Lo, Kyle and Von Werra, Leandro and Weber, Leon and Phan, Long and allal, Loubna Ben and Tanguy, Ludovic and Dey, Manan and Muñoz, Manuel Romero and Masoud, Maraim and Grandury, María and Šaško, Mario and Huang, Max and Coavoux, Maximin and Singh, Mayank and Jiang, Mike Tian-Jian and Vu, Minh Chien and Jauhar, Mohammad A. and Ghaleb, Mustafa and Subramani, Nishant and Kassner, Nora and Khamis, Nurulaqilla and Nguyen, Olivier and Espejel, Omar and de Gibert, Ona and Villegas, Paulo and Henderson, Peter and Colombo, Pierre and Amuok, Priscilla and Lhoest, Quentin and Harliman, Rheza and Bommasani, Rishi and López, Roberto Luis and Ribeiro, Rui and Osei, Salomey and Pyysalo, Sampo and Nagel, Sebastian and Bose, Shamik and Muhammad, Shamsuddeen Hassan and Sharma, Shanya and Longpre, Shayne and Nikpoor, Somaieh and Silberberg, Stanislav and Pai, Suhas and Zink, Sydney and Torrent, Tiago Timponi and Schick, Timo and Thrush, Tristan and Danchev, Valentin and Nikoulina, Vassilina and Laippala, Veronika and Lepercq, Violette and Prabhu, Vrinda and Alyafeai, Zaid and Talat, Zeerak and Raja, Arun and Heinzerling, Benjamin and Si, Chenglei and Salesky, Elizabeth and Mielke, Sabrina J. and Lee, Wilson Y. and Sharma, Abheesht and Santilli, Andrea and Chaffin, Antoine and Stiegler, Arnaud and Datta, Debajyoti and Szczechla, Eliza and Chhablani, Gunjan and Wang, Han and Pandey, Harshit and Strobelt, Hendrik and Fries, Jason Alan and Rozen, Jos and Gao, Leo and Sutawika, Lintang and Bari, M Saiful and Al-shaibani, Maged S. and Manica, Matteo and Nayak, Nihal and Teehan, Ryan and Albanie, Samuel and Shen, Sheng and Ben-David, Srulik and Bach, Stephen H. and Kim, Taewoon and Bers, Tali and Fevry, Thibault and Neeraj, Trishala and Thakker, Urmish and Raunak, Vikas and Tang, Xiangru and Yong, Zheng-Xin and Sun, Zhiqing and Brody, Shaked and Uri, Yallow and Tojarieh, Hadar and Roberts, Adam and Chung, Hyung Won and Tae, Jaesung and Phang, Jason and Press, Ofir and Li, Conglong and Narayanan, Deepak and Bourfoune, Hatim and Casper, Jared and Rasley, Jeff and Ryabinin, Max and Mishra, Mayank and Zhang, Minjia and Shoeybi, Mohammad and Peyrounette, Myriam and Patry, Nicolas and Tazi, Nouamane and Sanseviero, Omar and von Platen, Patrick and Cornette, Pierre and Lavallée, Pierre François and Lacroix, Rémi and Rajbhandari, Samyam and Gandhi, Sanchit and Smith, Shaden and Requena, Stéphane and Patil, Suraj and Dettmers, Tim and Baruwa, Ahmed and Singh, Amanpreet and Cheveleva, Anastasia and Ligozat, Anne-Laure and Subramonian, Arjun and Névéol, Aurélie and Lovering, Charles and Garrette, Dan and Tunuguntla, Deepak and Reiter, Ehud and Taktasheva, Ekaterina and Voloshina, Ekaterina and Bogdanov, Eli and Winata, Genta Indra and Schoelkopf, Hailey and Kalo, Jan-Christoph and Novikova, Jekaterina and Forde, Jessica Zosa and Clive, Jordan and Kasai, Jungo and Kawamura, Ken and Hazan, Liam and Carpuat, Marine and Clinciu, Miruna and Kim, Najoung and Cheng, Newton and Serikov, Oleg and Antverg, Omer and van der Wal, Oskar and Zhang, Rui and Zhang, Ruochen and Gehrmann, Sebastian and Pais, Shani and Shavrina, Tatiana and Scialom, Thomas and Yun, Tian and Limisiewicz, Tomasz and Rieser, Verena and Protasov, Vitaly and Mikhailov, Vladislav and Pruksachatkun, Yada and Belinkov, Yonatan and Bamberger, Zachary and Kasner, Zdeněk and Rueda, Alice and Pestana, Amanda and Feizpour, Amir and Khan, Ammar and Faranak, Amy and Santos, Ana and Hevia, Anthony and Unldreaj, Antigona and Aghagol, Arash and Abdollahi, Arezoo and Tammour, Aycha and HajiHosseini, Azadeh and Behroozi, Bahareh and Ajibade, Benjamin and Saxena, Bharat and Ferrandis, Carlos Muñoz and Contractor, Danish and Lansky, David and David, Davis and Kiela, Douwe and Nguyen, Duong A. and Tan, Edward and Baylor, Emi and Ozoani, Ezinwanne and Mirza, Fatima and Ononiwu, Frankline and Rezanejad, Habib and Jones, Hessie and Bhattacharya, Indrani and Solaiman, Irene and Sedenko, Irina and Nejadgholi, Isar and Passmore, Jesse and Seltzer, Josh and Sanz, Julio Bonis and Fort, Karen and Dutra, Livia and Samagaio, Mairon and Elbadri, Maraim and Mieskes, Margot and Gerchick, Marissa and Akinlolu, Martha and McKenna, Michael and Qiu, Mike and Ghauri, Muhammed and Burynok, Mykola and Abrar, Nafis and Rajani, Nazneen and Elkott, Nour and Fahmy, Nour and Samuel, Olanrewaju and An, Ran and Kromann, Rasmus and Hao, Ryan and Alizadeh, Samira and Shubber, Sarmad and Wang, Silas and Roy, Sourav and Viguier, Sylvain and Le, Thanh and Oyebade, Tobi and Le, Trieu and Yang, Yoyo and Nguyen, Zach and Kashyap, Abhinav Ramesh and Palasciano, Alfredo and Callahan, Alison and Shukla, Anima and Miranda-Escalada, Antonio and Singh, Ayush and Beilharz, Benjamin and Wang, Bo and Brito, Caio and Zhou, Chenxi and Jain, Chirag and Xu, Chuxin and Fourrier, Clémentine and Periñán, Daniel León and Molano, Daniel and Yu, Dian and Manjavacas, Enrique and Barth, Fabio and Fuhrimann, Florian and Altay, Gabriel and Bayrak, Giyaseddin and Burns, Gully and Vrabec, Helena U. and Bello, Imane and Dash, Ishani and Kang, Jihyun and Giorgi, John and Golde, Jonas and Posada, Jose David and Sivaraman, Karthik Rangasai and Bulchandani, Lokesh and Liu, Lu and Shinzato, Luisa and de Bykhovetz, Madeleine Hahn and Takeuchi, Maiko and Pàmies, Marc and Castillo, Maria A and Nezhurina, Marianna and Sänger, Mario and Samwald, Matthias and Cullan, Michael and Weinberg, Michael and De Wolf, Michiel and Mihaljcic, Mina and Liu, Minna and Freidank, Moritz and Kang, Myungsun and Seelam, Natasha and Dahlberg, Nathan and Broad, Nicholas Michio and Muellner, Nikolaus and Fung, Pascale and Haller, Patrick and Chandrasekhar, Ramya and Eisenberg, Renata and Martin, Robert and Canalli, Rodrigo and Su, Rosaline and Su, Ruisi and Cahyawijaya, Samuel and Garda, Samuele and Deshmukh, Shlok S and Mishra, Shubhanshu and Kiblawi, Sid and Ott, Simon and Sang-aroonsiri, Sinee and Kumar, Srishti and Schweter, Stefan and Bharati, Sushil and Laud, Tanmay and Gigant, Théo and Kainuma, Tomoya and Kusa, Wojciech and Labrak, Yanis and Bajaj, Yash Shailesh and Venkatraman, Yash and Xu, Yifan and Xu, Yingxin and Xu, Yu and Tan, Zhe and Xie, Zhongli and Ye, Zifan and Bras, Mathilde and Belkada, Younes and Wolf, Thomas},
+title={{BLOOM: A 176B-Parameter Open-Access Multilingual Language Model}},
+publisher={arXiv},
+year={2022},
 }
 
-@article{Muhammad2021.speed.aware,
-  bibtex_show={true},
-  abbr={ICCAIT},
-  title={Speed-Aware Routing Protocol for Reliability in Mobile ad-hoc Networks},
-  journal={Proceedings of the International Conference on Computing & Advances in Information Technology (ICCAIT)},
-  author={Muhammad, Mansur Alhaji and Isah, Abubakar and Abdulmumin, Idris and Muyim, Abubakar Muhammad},
-  year={2021}
+@misc{https://doi.org/10.48550/arxiv.2302.08956,
+doi={10.48550/ARXIV.2302.08956},
+url={https://arxiv.org/abs/2302.08956},
+author={Muhammad, Shamsuddeen Hassan and Abdulmumin, Idris and Ayele, Abinew Ali and Ousidhoum, Nedjma and Adelani, David Ifeoluwa and Yimam, Seid Muhie and Ahmad, Ibrahim Sa'id and Beloucif, Meriem and Mohammad, Saif and Ruder, Sebastian and Hourrane, Oumaima and Brazdil, Pavel and Ali, Felermino Dário Mário António and Davis, Davis and Osei, Salomey and Bello, Bello Shehu and Ibrahim, Falalu and Gwadabe, Tajuddeen and Rutunda, Samuel and Belay, Tadesse and Messelle, Wendimu Baye and Balcha, Hailu Beshada and Chala, Sisay Adugna and Gebremichael, Hagos Tesfahun and Opoku, Bernard and Arthur, Steven},
+title={{AfriSenti: A Twitter Sentiment Analysis Benchmark for African Languages}},
+publisher={arXiv},
+year={2023},
+}
+
+@inproceedings{parida-etal-2023-havqa,
+title="{H}a{VQA}: A Dataset for Visual Question Answering and Multimodal Research in{H}ausa Language",
+author="Parida, Shantipriyaand
+Abdulmumin, Idrisand
+Muhammad, Shamsuddeen Hassanand
+Bose, Aneeshand
+Kohli, Guneet Singhand
+Ahmad, Ibrahim Saidand
+Kotwal, Ketanand
+Deb Sarkar, Sayanand
+Bojar, Ond{\v{r}}ejand
+Kakudi, Habeebah",
+booktitle="Findings of the Association for Computational Linguistics: ACL 2023",
+month=jul,
+year="2023",
+address="Toronto, Canada",
+publisher="Association for Computational Linguistics",
+url="https://aclanthology.org/2023.findings-acl.646",
+pages="10162--10183"
+}
+
+@inproceedings{aliyu-etal-2023-hausanlp,
+title="{H}ausa{NLP} at{S}em{E}val-2023 Task 10: Transfer Learning, Synthetic Data and Side-information for Multi-level Sexism Classification",
+author="Aliyu, Saminu Mohammadand
+Abdulmumin, Idrisand
+Muhammad, Shamsuddeen Hassanand
+Ahmad, Ibrahim Saidand
+Salahudeen, Saheed Abdullahiand
+Yusuf, Aliyuand
+Lawan, Falalu Ibrahim",
+booktitle="Proceedings of the The 17th International Workshop on Semantic Evaluation (SemEval-2023)",
+month=jul,
+year="2023",
+address="Toronto, Canada",
+publisher="Association for Computational Linguistics",
+url="https://aclanthology.org/2023.semeval-1.273",
+pages="1983--1987"
+}
+
+@inproceedings{muhammad-etal-2023-semeval,
+title="{S}em{E}val-2023 Task 12: Sentiment Analysis for{A}frican Languages ({A}fri{S}enti-{S}em{E}val)",
+author="Muhammad, Shamsuddeen Hassanand
+Abdulmumin, Idrisand
+Yimam, Seid Muhieand
+Adelani, David Ifeoluwaand
+Ahmad, Ibrahim Saidand
+Ousidhoum, Nedjmaand
+Ayele, Abinew Aliand
+Mohammad, Saifand
+Beloucif, Meriemand
+Ruder, Sebastian",
+booktitle="Proceedings of the The 17th International Workshop on Semantic Evaluation (SemEval-2023)",
+month=jul,
+year="2023",
+address="Toronto, Canada",
+publisher="Association for Computational Linguistics",
+url="https://aclanthology.org/2023.semeval-1.315",
+pages="2319--2337"
+}
+
+@inproceedings{
+adelani2023africanews,
+title={Africa{NEWS}: News Topic Classification for African languages},
+author={David Ifeoluwa Adelani and Marek Masiak and Israel Abebe Azime and Jesujoba Oluwadara Alabi and Atnafu Lambebo Tonja and Christine Mwase and Odunayo Ogundepo and Bonaventure F. P. Dossou and Akintunde Oladipo and Doreen Nixdorf and Chris Chinenye Emezue and sana Sabah al-azzawi and Blessing Kudzaishe Sibanda and Davis David and Lolwethu Ndolela and Jonathan Mukiibi and Tunde Oluwaseyi Ajayi and Tatiana Moteu Ngoli and Brian Odhiambo and Abraham Toluwase Owodunni and Nnaemeka Casmir Obiefuna and Shamsuddeen Hassan Muhammad and Saheed Salahudeen Abdullahi and Mesay Gemeda Yigezu and Tajuddeen Gwadabe and Idris Abdulmumin and Mahlet Taye Bame and Oluwabusayo Olufunke Awoyomi and Iyanuoluwa Shode and Tolulope Anu Adelani and Habiba Abdulganiy Kailani and Abdul-Hakeem Omotayo and Adetola Adeeko and Afolabi Abeeb and Anuoluwapo Aremu and Olanrewaju Samuel and Clemencia Siro and Wangari Kimotho and Onyekachi Raphael Ogbu and CHINEDU EMMANUEL MBONU and Chiamaka Ijeoma Chukwuneke and Samuel Fanijo and Jessica Ojo and Oyinkansola Fiyinfoluwa Awosan and Tadesse Kebede Guge and Toadoum Sari Sakayo and Pamela Nyatsine and Freedmore Sidume and Oreen Yousuf and Mardiyyah Oduwole and Ussen Kimanuka and Kanda Patrick Tshinu and Thina Diko and Siyanda Nxakama and Abdulmejid Tuni Johar and Pontus Stenetorp},
+booktitle={4th{W}orkshop on{A}frican{N}atural{L}anguage{P}rocessing},
+year={2023},
+url={https://openreview.net/forum?id=sj45chH1F1}
+}
+
+@InProceedings{adelani-EtAl:2023:ijcnlp,
+author={Adelani, David IfeoluwaandMasiak, MarekandAzime, Israel AbebeandAlabi, JesujobaandTonja, Atnafu LambeboandMwase, ChristineandOgundepo, OdunayoandDossou, Bonaventure F. P.andOladipo, AkintundeandNixdorf, DoreenandEmezue, Chris Chinenyeandal-azzawi, sanaandSibanda, BlessingandDavid, DavisandNdolela, LolwethuandMukiibi, JonathanandAjayi, TundeandMoteu, TatianaandOdhiambo, BrianandOwodunni, AbrahamandObiefuna, NnaemekaandMohamed, MuhidinandMuhammad, Shamsuddeen HassanandAbabu, Teshome MulugetaandSalahudeen, Saheed AbdullahiandYigezu, Mesay GemedaandGwadabe, TajuddeenandAbdulmumin, IdrisandTaye, MahletandAwoyomi, OluwabusayoandShode, IyanuoluwaandAdelani, TolulopeandAbdulganiyu, HabibaandOmotayo, Abdul-HakeemandAdeeko, AdetolaandAfolabi, AbeebandAremu, AnuoluwapoandSamuel, OlanrewajuandSiro, ClemenciaandKimotho, WangariandOgbu, OnyekachiandMbonu, ChineduandChukwuneke, ChiamakaandFanijo, SamuelandOjo, JessicaandAwosan, OyinkansolaandKebede, TadesseandSakayo, Toadoum SariandNyatsine, PamelaandSidume, FreedmoreandYousuf, OreenandOduwole, MardiyyahandTshinu, kandaandKimanuka, UssenandDiko, ThinaandNxakama, SiyandaandNigusse, SinodosandJohar, AbdulmejidandMohamed, ShafieandHassan, Fuad MireandMehamed, Moges AhmedandNgabire, EvrardandJules, JulesandSsenkungu, IvanandStenetorp, Pontus},
+title={MasakhaNEWS: News Topic Classification for African languages},
+booktitle={Proceedings of the 13th International Joint Conference on Natural Language Processing and the 3rd Conference of the Asia-Pacific Chapter of the Association for Computational Linguistics},
+month={November},
+year={2023},
+address={Nusa Dua, Bali},
+publisher={Association for Computational Linguistics},
+pages={144--159},
+url={https://aclanthology.org/2023.ijcnlp-long.10}
 }
