--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,10 +38,9 @@ author={Abdulmumin, Idris and Galadanci, Bashir Shehu and Hassan Muhammad, Shams
 booktitle={2022 IEEE Nigeria 4th International Conference on Disruptive Technologies for Sustainable Development (NIGERCON)},
 title={Quantity vs. Quality of Monolingual Source Data in Automatic Text Translation: Can It Be Too Little If It Is Too Good?},
 year={2022},
-volume={},
-number={},
 pages={1-5},
-doi={10.1109/NIGERCON54645.2022.9803137}}
+doi={10.1109/NIGERCON54645.2022.9803137}
+}
 
 @inproceedings{adelani-etal-2022-thousand,
 title="A Few Thousand Translations Go a Long Way! Leveraging Pre-trained Models for{A}frican News Translation",
